🛠 Refactoring Code * Refactor update of driver to `/drivers/{id}` resource to stay consistent with resource definition/design * Unify all ids in resources to `id`, to prepare for upcoming refactoring of api by extracting duplicates
